"""create_all_tables

Revision ID: 38de1d84b59c
Revises: cad80ff6f073
Create Date: 2026-02-24 23:06:48.619468

"""

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
import common.db.db_types


# revision identifiers, used by Alembic.
revision: str = "38de1d84b59c"
down_revision: Union[str, None] = "cad80ff6f073"
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "species",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("ml_label", sa.Text(), nullable=False),
        sa.Column("scientific_name", sa.Text(), nullable=False),
        sa.Column("common_name", sa.Text(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("slug", sa.Text(), nullable=True),
        sa.Column("description", sa.Text(), nullable=True),
        sa.Column("habitat", sa.JSON(), nullable=True),
        sa.Column("locations", sa.JSON(), nullable=True),
        sa.Column("taxonomy", sa.JSON(), nullable=True),
        sa.Column("image_urls", sa.JSON(), nullable=True),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_species")),
        sa.UniqueConstraint("ml_label", name=op.f("uq_species_ml_label")),
        sa.UniqueConstraint("slug", name=op.f("uq_species_slug")),
    )
    op.create_table(
        "users",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("email", sa.String(length=255), nullable=False),
        sa.Column("username", sa.String(length=50), nullable=False),
        sa.Column("password_hash", sa.Text(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("email_verified", sa.Boolean(), nullable=False),
        sa.Column("mfa_enabled", sa.Boolean(), nullable=False),
        sa.Column("email_verified_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("auth_providers", sa.JSON(), nullable=True),
        sa.Column("mfa_secret", common.db.db_types.EncryptedText(), nullable=True),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_users")),
    )
    op.create_index(op.f("ix_users_email"), "users", ["email"], unique=True)
    op.create_index(op.f("ix_users_username"), "users", ["username"], unique=True)
    op.create_table(
        "dive_logs",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column("dive_date", sa.Date(), nullable=False),
        sa.Column("dive_title", sa.Text(), nullable=False),
        sa.Column("dive_site", sa.String(length=255), nullable=False),
        sa.Column("duration_minutes", sa.Integer(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "dive_period",
            sa.Enum("MORNING", "AFTERNOON", "NIGHT", name="diveperiod"),
            nullable=True,
        ),
        sa.Column(
            "dive_start_type",
            sa.Enum("BOAT", "SHORE", name="divestarttype"),
            nullable=True,
        ),
        sa.Column(
            "dive_type",
            sa.Enum(
                "REEF",
                "WALL",
                "DRIFT",
                "CAVE",
                "DEEP",
                "SHIPWRECK",
                "OTHER",
                name="divetype",
            ),
            nullable=True,
        ),
        sa.Column(
            "dive_purpose",
            sa.Enum(
                "RECREATIONAL",
                "TRAINING",
                "RESEARCH",
                "RESTORATION",
                "OTHER",
                name="divepurpose",
            ),
            nullable=True,
        ),
        sa.Column("max_depth_ft", sa.DECIMAL(precision=6, scale=2), nullable=True),
        sa.Column("avg_depth_ft", sa.DECIMAL(precision=6, scale=2), nullable=True),
        sa.Column("visibility_ft", sa.DECIMAL(precision=6, scale=2), nullable=True),
        sa.Column("visibility_description", sa.Text(), nullable=True),
        sa.Column("location", common.db.db_types.PointGeography(), nullable=True),
        sa.Column(
            "weather",
            sa.Enum(
                "SUNNY",
                "PARTLY_CLOUDY",
                "CLOUDY",
                "RAINY",
                "WINDY",
                "FOGGY",
                name="weather",
            ),
            nullable=True,
        ),
        sa.Column("air_temp_f", sa.DECIMAL(precision=5, scale=2), nullable=True),
        sa.Column("surface_temp_f", sa.DECIMAL(precision=5, scale=2), nullable=True),
        sa.Column("bottom_temp_f", sa.DECIMAL(precision=5, scale=2), nullable=True),
        sa.Column(
            "water_type",
            sa.Enum("SALT", "FRESH", "BRACKISH", name="watertype"),
            nullable=True,
        ),
        sa.Column(
            "body_of_water",
            sa.Enum("OCEAN", "LAKE", "RIVER", "QUARRY", "CENOTE", name="bodyofwater"),
            nullable=True,
        ),
        sa.Column(
            "wave",
            sa.Enum("NONE", "LIGHT", "MODERATE", "STRONG", name="condition"),
            nullable=True,
        ),
        sa.Column(
            "current",
            sa.Enum("NONE", "LIGHT", "MODERATE", "STRONG", name="condition"),
            nullable=True,
        ),
        sa.Column(
            "surge",
            sa.Enum("NONE", "LIGHT", "MODERATE", "STRONG", name="condition"),
            nullable=True,
        ),
        sa.Column("equipment", sa.JSON(), nullable=True),
        sa.Column("gas_mix", sa.JSON(), nullable=True),
        sa.Column("cylinder_pressure", sa.JSON(), nullable=True),
        sa.Column("safety_stops", sa.JSON(), nullable=True),
        sa.Column("buddy", sa.Text(), nullable=True),
        sa.Column("dive_center", sa.Text(), nullable=True),
        sa.Column(
            "experience_feeling",
            sa.Enum("AMAZING", "GOOD", "AVERAGE", "POOR", name="experiencefeeling"),
            nullable=True,
        ),
        sa.Column("experience_rating", sa.Integer(), nullable=True),
        sa.Column("public_notes", sa.Text(), nullable=True),
        sa.Column("private_notes", sa.Text(), nullable=True),
        sa.Column(
            "log_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=True,
        ),
        sa.ForeignKeyConstraint(
            ["user_id"], ["users.id"], name=op.f("fk_dive_logs_user_id_users")
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_dive_logs")),
    )
    op.create_index(
        op.f("ix_dive_logs_user_id"), "dive_logs", ["user_id"], unique=False
    )
    op.create_table(
        "privacy_settings",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "profile_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=False,
        ),
        sa.Column(
            "dive_logs_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=False,
        ),
        sa.Column(
            "media_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=False,
        ),
        sa.Column(
            "stats_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["users.id"],
            name=op.f("fk_privacy_settings_user_id_users"),
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_privacy_settings")),
    )
    op.create_index(
        op.f("ix_privacy_settings_user_id"),
        "privacy_settings",
        ["user_id"],
        unique=False,
    )
    op.create_table(
        "scubadex_entries",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column("species_id", sa.UUID(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("times_encountered", sa.Integer(), nullable=False),
        sa.Column("date_first_encountered", sa.Date(), nullable=False),
        sa.ForeignKeyConstraint(
            ["species_id"],
            ["species.id"],
            name=op.f("fk_scubadex_entries_species_id_species"),
        ),
        sa.ForeignKeyConstraint(
            ["user_id"], ["users.id"], name=op.f("fk_scubadex_entries_user_id_users")
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_scubadex_entries")),
        sa.UniqueConstraint("user_id", "species_id", name="uq_scubadex_user_species"),
    )
    op.create_index(
        op.f("ix_scubadex_entries_species_id"),
        "scubadex_entries",
        ["species_id"],
        unique=False,
    )
    op.create_index(
        op.f("ix_scubadex_entries_user_id"),
        "scubadex_entries",
        ["user_id"],
        unique=False,
    )
    op.create_table(
        "user_certifications",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column("certification_name", sa.Text(), nullable=False),
        sa.Column("issuer", sa.Text(), nullable=False),
        sa.Column("issued_date", sa.Date(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("expiry_date", sa.Date(), nullable=True),
        sa.Column("certification_number", sa.Text(), nullable=True),
        sa.Column("notes", sa.Text(), nullable=True),
        sa.Column("verified", sa.Boolean(), nullable=True),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["users.id"],
            name=op.f("fk_user_certifications_user_id_users"),
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_user_certifications")),
    )
    op.create_index(
        op.f("ix_user_certifications_user_id"),
        "user_certifications",
        ["user_id"],
        unique=False,
    )
    op.create_table(
        "user_profiles",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("bio", sa.Text(), nullable=True),
        sa.Column("avatar_url", sa.Text(), nullable=True),
        sa.Column("avatar_storage_key", sa.Text(), nullable=True),
        sa.Column("first_name", sa.String(length=100), nullable=True),
        sa.Column("last_name", sa.String(length=100), nullable=True),
        sa.Column("location", sa.String(length=255), nullable=True),
        sa.Column("website_url", sa.Text(), nullable=True),
        sa.Column("birth_date", sa.Date(), nullable=True),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["users.id"],
            name=op.f("fk_user_profiles_user_id_users"),
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_user_profiles")),
    )
    op.create_index(
        op.f("ix_user_profiles_user_id"), "user_profiles", ["user_id"], unique=False
    )
    op.create_table(
        "user_settings",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "preferred_units",
            sa.Enum("IMPERIAL", "METRIC", name="unitsystem"),
            nullable=False,
        ),
        sa.Column("timezone", sa.String(length=50), nullable=False),
        sa.Column("language", sa.String(length=10), nullable=False),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["users.id"],
            name=op.f("fk_user_settings_user_id_users"),
            ondelete="CASCADE",
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_user_settings")),
    )
    op.create_index(
        op.f("ix_user_settings_user_id"), "user_settings", ["user_id"], unique=False
    )
    op.create_table(
        "media",
        sa.Column("id", sa.UUID(), nullable=False),
        sa.Column("user_id", sa.UUID(), nullable=False),
        sa.Column(
            "status",
            sa.Enum(
                "PENDING",
                "UPLOADING",
                "UPLOADED",
                "PROCESSING",
                "PROCESSED",
                "FAILED",
                name="mediastatus",
            ),
            nullable=False,
        ),
        sa.Column("storage_key", sa.Text(), nullable=False),
        sa.Column("type", sa.Enum("IMAGE", "VIDEO", name="mediatype"), nullable=False),
        sa.Column(
            "created_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("dive_log_id", sa.UUID(), nullable=True),
        sa.Column(
            "ml_tagging_status",
            sa.Enum("PENDING", "SUCCESS", "FAILED", name="mltaggingstatus"),
            nullable=True,
        ),
        sa.Column("mime_type", sa.Text(), nullable=True),
        sa.Column("file_size_bytes", sa.BigInteger(), nullable=True),
        sa.Column("width", sa.Integer(), nullable=True),
        sa.Column("height", sa.Integer(), nullable=True),
        sa.Column("duration_seconds", sa.DECIMAL(precision=10, scale=3), nullable=True),
        sa.Column("taken_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("exif", sa.JSON(), nullable=True),
        sa.Column("processed_versions", sa.JSON(), nullable=True),
        sa.Column("description", sa.Text(), nullable=True),
        sa.Column(
            "media_visibility",
            sa.Enum("PUBLIC", "PRIVATE", "UNLISTED", name="visibility"),
            nullable=True,
        ),
        sa.Column("error_details", sa.Text(), nullable=True),
        sa.ForeignKeyConstraint(
            ["dive_log_id"],
            ["dive_logs.id"],
            name=op.f("fk_media_dive_log_id_dive_logs"),
            ondelete="SET NULL",
        ),
        sa.ForeignKeyConstraint(
            ["user_id"], ["users.id"], name=op.f("fk_media_user_id_users")
        ),
        sa.PrimaryKeyConstraint("id", name=op.f("pk_media")),
    )
    op.create_index(
        op.f("ix_media_dive_log_id"), "media", ["dive_log_id"], unique=False
    )
    op.create_index(op.f("ix_media_user_id"), "media", ["user_id"], unique=False)
    op.create_table(
        "media_species_tags",
        sa.Column("media_id", sa.UUID(), nullable=False),
        sa.Column("species_id", sa.UUID(), nullable=False),
        sa.Column(
            "source", sa.Enum("USER", "ML", name="speciestagsource"), nullable=False
        ),
        sa.Column(
            "tagged_at",
            sa.DateTime(timezone=True),
            server_default=sa.text("(CURRENT_TIMESTAMP)"),
            nullable=False,
        ),
        sa.Column("model_confidence", sa.DECIMAL(precision=5, scale=4), nullable=True),
        sa.ForeignKeyConstraint(
            ["media_id"],
            ["media.id"],
            name=op.f("fk_media_species_tags_media_id_media"),
            ondelete="CASCADE",
        ),
        sa.ForeignKeyConstraint(
            ["species_id"],
            ["species.id"],
            name=op.f("fk_media_species_tags_species_id_species"),
        ),
        sa.PrimaryKeyConstraint(
            "media_id", "species_id", name=op.f("pk_media_species_tags")
        ),
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("media_species_tags")
    op.drop_index(op.f("ix_media_user_id"), table_name="media")
    op.drop_index(op.f("ix_media_dive_log_id"), table_name="media")
    op.drop_table("media")
    op.drop_index(op.f("ix_user_settings_user_id"), table_name="user_settings")
    op.drop_table("user_settings")
    op.drop_index(op.f("ix_user_profiles_user_id"), table_name="user_profiles")
    op.drop_table("user_profiles")
    op.drop_index(
        op.f("ix_user_certifications_user_id"), table_name="user_certifications"
    )
    op.drop_table("user_certifications")
    op.drop_index(op.f("ix_scubadex_entries_user_id"), table_name="scubadex_entries")
    op.drop_index(op.f("ix_scubadex_entries_species_id"), table_name="scubadex_entries")
    op.drop_table("scubadex_entries")
    op.drop_index(op.f("ix_privacy_settings_user_id"), table_name="privacy_settings")
    op.drop_table("privacy_settings")
    op.drop_index(op.f("ix_dive_logs_user_id"), table_name="dive_logs")
    op.drop_table("dive_logs")
    op.drop_index(op.f("ix_users_username"), table_name="users")
    op.drop_index(op.f("ix_users_email"), table_name="users")
    op.drop_table("users")
    op.drop_table("species")
    # ### end Alembic commands ###
